ai-services/local-deep-research/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-deep-research
  namespace: local-deep-research
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: local-deep-research
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate 
  template:
    metadata:
      labels:
        app.kubernetes.io/name: local-deep-research
    spec:
      containers:
      - name: local-deep-research
        # renovate: datasource=github-tags depname=LearningCircuit/local-deep-research versioning=semver
        image: localdeepresearch/local-deep-research:1.2.14
        ports:
        - name: ldr
          containerPort: 5000
        volumeMounts:
        - name: local-deep-research-data
          mountPath: /data
      volumes:
      - name: local-deep-research-data
        persistentVolumeClaim:
          claimName: local-deep-research-data-nfs-pvc
